--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,28 @@ body {
 a {
   text-decoration: none;
 }
+
+input {
+  border-radius: 10px;
+  padding: 10px;
+  width: calc(100% - 20px);
+  border: 1px solid #965995;
+  outline: 0;
+}
+
+.btn-primary {
+  display: inline-block;
+  background-color: #9F85F7;
+  padding: 12px 22px;
+  border-radius: 10px;
+  font-family: "Quicksand",sans-serif;
+  font-size: 13px;
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+  border: 0;
+}
+
+.btn-primary:hover {
+  background-color: #8e6efa;
+}
